--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   image_picker: ^1.0.8
   firebase_core: ^2.24.2
   firebase_auth: ^4.16.0
+  cloud_firestore: ^4.14.0
+  firebase_storage: ^11.6.0
+  path_provider: ^2.1.3
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
