--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_storage: ^11.6.0
   path_provider: ^2.1.3
   provider: ^6.1.2
+  firebase_messaging: ^14.7.10
 
 dev_dependencies:
   flutter_test:
