--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   path_provider: ^2.1.3
   provider: ^6.1.2
   firebase_messaging: ^14.7.10
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
