--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   provider: ^6.1.2
   firebase_messaging: ^14.7.10
   http: ^1.1.0
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
